updated page layout

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         <section class="about-me">
             <div class="box">
                     <h2>About Me</h2>
-                <div class="content">
-                    <img src="assets/images/IMG_2377.JPG">
+                <div class="about-content">
+                    <div class="img-box">
+                        <img src="assets/images/IMG_2377.JPG">
+                    </div>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 </div>
             </div>
@@ -48,7 +50,7 @@
         <section class="contact">
             <div class="box">
                     <h2>Contact Me</h2>
-                <div class="content">
+                <div class="contact-content">
                     <ul>
                         <li>
                             <span class="phone-number">Cell Phone:</span>540-226-5627
