header layout updated

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <h1>Ryan Potere</h1>
         <nav>
             <ul>
-                <li>
+                <li class="nav-bar">
                     <a href="#">About</a> 
                 </li>
-                <li>
+                <li class="nav-bar">
                     <a href="#">Featured</a> 
                 </li>
-                <li>
+                <li class="nav-bar">
                     <a href="#">Contact</a> 
                 </li>
-                <li>
+                <li class="nav-bar">
                     <a href="#">Resume</a> 
                 </li>
             </ul>
@@ -56,7 +56,7 @@
                             <span class="phone-number">Cell Phone:</span>540-226-5627
                         </li>
                         <li>
-                            <span class="email">Email:</span><a href="">Ryan.potere@gmail.com</a>
+                            <span class="email">Email:</span><a class="email-address" href="">Ryan.potere@gmail.com</a>
                         </li>
                     </ul>
                 </div>
