style changes - header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!--google font-->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" text="text/css" href="assets/css/style.css">
     <title>Ryan Potere - Portfolio</title>
 </head>
@@ -56,7 +61,7 @@
                             <span class="phone-number">Cell Phone:</span>540-226-5627
                         </li>
                         <li>
-                            <span class="email">Email:</span><a class="email-address" href="">Ryan.potere@gmail.com</a>
+                            <span class="email">Email:</span><a class="email-address" href="mailto:ryan.potere@gmail.com">Ryan.potere@gmail.com</a>
                         </li>
                     </ul>
                 </div>
