updates to html with layout change, photos added for first project, place holder photos added to fill space.

--- a/index.html
+++ b/index.html
@@ -34,21 +34,28 @@
 
     <main>
         <section class="about-me">
-            <div class="box">
-                    <h2>About Me</h2>
-                <div class="about-content">
-                    <div class="img-box">
-                        <img src="assets/images/IMG_2377.JPG">
-                    </div>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                </div>
+            <div class="img-box">
+                <img src="assets/images/ryan-potere-photo.png">
+            </div>
+            <div class="about-box">
+                <h2>About Me</h2>
+                <p>
+                    My name is Ryan Potere, I am a junior developer with a passion for web design.
+                </p>
             </div>
         </section>
-        <section class="work">
-            <div class="box">
-                    <h2>Work</h2>
-                <div class="content">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <section class="featured">
+            <div class="featured-projects">
+                <div class="main-project-container">
+                    <img class="marketing" src="assets/images/digital-marketing-meeting.jpg">
+                </div>
+                <div class="secondary-project-container">
+                    <div class="bar-container">
+                        <img class="bar" src="assets/images/the-gavel.png">
+                    </div>
+                    <div class="record-container">
+                        <img class="record" src="assets/images/firefly-studios.png">
+                    </div>
                 </div>
             </div>
         </section>
