blur while hover added to project photos.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="box">
                     <h2>Contact Me</h2>
                 <div class="contact-content">
-                    <ul>
+                    <ul class="info">
                         <li>
                             <span class="phone-number">Cell Phone:</span>540-226-5627
                         </li>
