finishing touches added to css file.

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <nav>
             <ul>
                 <li class="nav-bar">
-                    <a href="#bio">About</a> 
+                    <a class="left" href="#bio">About</a> 
                 </li>
                 <li class="nav-bar">
-                    <a href="#current-projects">Featured</a> 
+                    <a class="left" href="#current-projects">Featured</a> 
                 </li>
                 <li class="nav-bar">
-                    <a href="#contact-me">Contact</a> 
+                    <a class="left" href="#contact-me">Contact</a> 
                 </li>
                 <li class="nav-bar">
-                    <a href="#">Resume</a> 
+                    <a class="left" href="#">Resume</a> 
                 </li>
             </ul>
         </nav>
