comments add to provide information about the html and css.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
     <header>
         <h1>Ryan Potere</h1>
+
+        <!--clicking on nav links take you to corresponding parts of the page-->
+
         <nav>
             <ul>
                 <li class="nav-bar">
@@ -35,7 +38,7 @@
     <main>
         <section id="bio" class="about-me">
             <div class="img-box">
-                <img src="assets/images/ryan-potere-photo.png">
+                <img src="assets/images/ryan-potere-photo.png" alt="Bio photo">
             </div>
             <div class="about-box">
                 <h2>About Me</h2>
@@ -44,6 +47,10 @@
                 </p>
             </div>
         </section>
+
+        <!--show first piece of work larger than other projects-->
+
+        <!--clicking on first picture wil open new tab and proceed to Horiseons homepage-->
 
         <section class="featured">
             <div id="current-projects" class="featured-projects"> 
@@ -72,6 +79,8 @@
                 </div>
             </div>
         </section>
+
+        <!--cellphone and email address added=, email opens window to send email-->
 
         <section id="contact-me" class="contact">
             <div class="box">
