read me file updated to include screen shots.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!--google font-->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" text="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Ryan Potere - Portfolio</title>
 </head>
 <body>
@@ -57,7 +58,7 @@
                 <h2>Featured Work</h2>
                 <div class="main-project-container">
                     <a href="https://rjpotere.github.io/code-refactor/" target="_blank">
-                        <img class="marketing" src="assets/images/digital-marketing-meeting.jpg">
+                        <img class="marketing" src="assets/images/digital-marketing-meeting.jpg" alt="Marketing meeting">
                     </a>
                     <h3>Horiseons Marketing Code-Refactor</h3>
                 </div>
@@ -65,14 +66,14 @@
                 <div class="secondary-project-container">
                     <div class="bar-container">
                         <a href="#">
-                            <img class="bar" src="assets/images/the-gavel.png">
+                            <img class="bar" src="assets/images/the-gavel.png" alt="Local bar">
                         </a>
                         <h3>Project 2</h3>
                     </div>
 
                     <div class="record-container">
                         <a href="#">
-                            <img class="record" src="assets/images/firefly-studios.png">
+                            <img class="record" src="assets/images/firefly-studios.png" alt="Record store">
                         </a>
                         <h3>Project 3</h3>
                     </div>
