portfolio updated with resume and projects.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!--google font-->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Ryan Potere - Portfolio</title>
@@ -30,7 +30,7 @@
                     <a class="left" href="#contact-me">Contact</a> 
                 </li>
                 <li class="nav-bar">
-                    <a class="left" href="#">Resume</a> 
+                    <a class="left" href="RPotere Resume2021.pdf">Resume</a> 
                 </li>
             </ul>
         </nav>
@@ -52,10 +52,9 @@
         <!--show first piece of work larger than other projects-->
 
         <!--clicking on first picture wil open new tab and proceed to Horiseons homepage-->
-
+        <h2 class="mainworkh2">Featured Work</h2>
         <section class="featured">
             <div id="current-projects" class="featured-projects"> 
-                <h2>Featured Work</h2>
                 <div class="main-project-container">
                     <a href="https://rjpotere.github.io/code-refactor/" target="_blank">
                         <img class="marketing" src="assets/images/digital-marketing-meeting.jpg" alt="Marketing meeting">
@@ -65,17 +64,23 @@
 
                 <div class="secondary-project-container">
                     <div class="bar-container">
-                        <a href="#">
-                            <img class="bar" src="assets/images/the-gavel.png" alt="Local bar">
+                        <a href="https://asradinsky.github.io/Music-Mashup/">
+                            <img class="bar" src="assets/images/musicmashup.png" alt="API application">
                         </a>
-                        <h3>Project 2</h3>
+                        <h3>Project 1</h3>
                     </div>
 
                     <div class="record-container">
-                        <a href="#">
-                            <img class="record" src="assets/images/firefly-studios.png" alt="Record store">
+                        <a href="https://rjpotere.github.io/weather-dashboard/">
+                            <img class="record" src="assets/images/weatherdashboard.png" alt="Weather API application">
                         </a>
-                        <h3>Project 3</h3>
+                        <h3>Weather Dashboard API</h3>
+                    </div>
+                    <div class="schedule-container">
+                        <a href="https://rjpotere.github.io/daily-work-schedule/">
+                            <img class="daily-work-schedule" src="assets/images/workscheduler.png" alt="Work Schedule application">
+                        </a>
+                        <h3>Daily Work Scheduler</h3>
                     </div>
                 </div>
             </div>
@@ -93,6 +98,9 @@
                         </li>
                         <li>
                             <span class="email">Email:</span><a class="email-address" href="mailto:ryan.potere@gmail.com">Ryan.potere@gmail.com</a>
+                        </li>
+                        <li>
+                            <span class="findme">Find me on LinkedIn</span><a class="bi bi-linkedin linkedin-account" href="https://www.linkedin.com/in/ryan-potere-1328511bb/"></a></a>
                         </li>
                     </ul>
                 </div>
