--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="left" href="#contact-me">Contact</a> 
                 </li>
                 <li class="nav-bar">
-                    <a class="left" href="RPotere Resume2021.pdf">Resume</a> 
+                    <a class="left" href="RPotere Resume-tech.pdf">Resume</a> 
                 </li>
             </ul>
         </nav>
@@ -100,7 +100,7 @@
                             <span class="email">Email:</span><a class="email-address" href="mailto:ryan.potere@gmail.com">Ryan.potere@gmail.com</a>
                         </li>
                         <li>
-                            <span class="findme">Find me on LinkedIn</span><a class="bi bi-linkedin linkedin-account" href="https://www.linkedin.com/in/ryan-potere-1328511bb/"></a></a>
+                            <span class="findme">Social Media:</span><a class="bi bi-linkedin linkedin-account" href="https://www.linkedin.com/in/ryan-potere-1328511bb/"></a></a><a class="bi bi-github" href="https://github.com/rjpotere"></a>
                         </li>
                     </ul>
                 </div>
