portfolio updated to include iPortfolio project.

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <section class="featured">
             <div id="current-projects" class="featured-projects"> 
                 <div class="main-project-container">
-                    <a href="https://rjpotere.github.io/code-refactor/" target="_blank">
-                        <img class="marketing" src="assets/images/digital-marketing-meeting.jpg" alt="Marketing meeting">
+                    <a href="https://pure-chamber-08412.herokuapp.com/" target="_blank">
+                        <img class="marketing" src="assets/images/stock-tracker.png" alt="Stock Tracker App">
                     </a>
-                    <h3>Horiseons Marketing Code-Refactor</h3>
+                    <h3>iPortfolio</h3>
                 </div>
 
                 <div class="secondary-project-container">
@@ -86,7 +86,7 @@
             </div>
         </section>
 
-        <!--cellphone and email address added=, email opens window to send email-->
+        <!--cellphone and email address added, email opens window to send email-->
 
         <section id="contact-me" class="contact">
             <div class="box">
